--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,10 @@
 
     <div class="wrapper logos">  
         <div>
-            <img src="/assets/images/ufv_logo.png" width="30%">
+            <img src="{{'/assets/images/ufv_logo.png' | relative_url}}" width="30%">
         </div>
         <div>
-            <img src="/assets/images/dpi_logo.png" width="20%">
+            <img src="{{'/assets/images/dpi_logo.png' | relative_url}}" width="20%">
         </div>
     </div>
   
