--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,10 @@
-<footer class="site-footer h-card">
-    <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-    <div class="wrapper logos">  
+<footer class="site-footer h-card wrapper">
+    <div class="logos">  
         <div>
-            <img src="{{'/assets/images/ufv_logo.png' | relative_url}}" width="30%">
+            <img src="{{'/assets/images/ufv_logo.png' | relative_url}}" width="25%">
         </div>
         <div>
-            <img src="{{'/assets/images/dpi_logo.png' | relative_url}}" width="20%">
+            <img src="{{'/assets/images/dpi_logo.png' | relative_url}}" width="36%">
         </div>
     </div>
   
