--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,42 @@
-
 .logos {
     display: flex;
+    align-items: center;
     text-align: center;
 }
 
 .main-photo {
-    text-align: center;
-    border-radius: 10px;
     width: 100%;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
+}
+
+.ufv-background {
+    background-color: rgb(96, 46, 46)
+}
+
+.site-header {
+    border-bottom: 0px;
+    border-width: 2px;
+    border-top: 0px;
+    padding-top: 20px;
+}
+
+.site-footer {
+    border-width: 2px;
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.site-nav {
+    font-size: 18px;
+}
+
+.wrapper {
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.page-content {
+    padding-top: 10px;
 }
