--- a/_layouts/contest.html
+++ b/_layouts/contest.html
@@ -27,7 +27,7 @@
             </div>
     
             <div class="contest-info">
-                <img class="contest-photo" src="{{'/assets/images/dpi_picture.jpg' | relative_url}}">
+                <img class="contest-photo" src="{{page.photo | relative_url}}">
 
                 <table>
                     <tr>
