--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
   
         <meta name="robots" content="follow, index"/>
         <meta name="description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
-        <meta property="og:url" content="http://boca.dpi.ufv.br/maratona" />
+        <meta property="og:url" content="https://lucasnfe.github.io/maratona-ufv" />
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Maratona de Programação UFV" />
         <meta property="og:description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
@@ -13,7 +13,7 @@
         <meta property="og:image" content="https://lucasnfe.github.io/maratona-ufv/assets/images/social.png" />
   
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:site" content="http://boca.dpi.ufv.br/maratona" />
+        <meta name="twitter:site" content="https://lucasnfe.github.io/maratona-ufv" />
         <meta name="twitter:title" content="Maratona de Programação UFV" />
         <meta name="twitter:description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
         <meta name="twitter:image" content="https://lucasnfe.github.io/maratona-ufv/assets/images/social.png" />
