Fixed site url in meta

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,13 @@
         <meta property="og:site_name" content="Maratona de Programação UFV" />
         <meta property="og:description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
         <meta property="og:title" content="Maratona de Programação UFV" />
-        <meta property="og:image" content="https://lucasnfe.github.io/maratona-ufv/assets/images/social.png" />
+        <meta property="og:image:secure_url" content="https://lucasnfe.github.io/maratona-ufv/assets/images/social.png" />
   
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="https://lucasnfe.github.io/maratona-ufv" />
         <meta name="twitter:title" content="Maratona de Programação UFV" />
         <meta name="twitter:description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
-        <meta name="twitter:image" content="https://lucasnfe.github.io/maratona-ufv/assets/images/social.png" />
+        <meta name="twitter:image:secure_url" content="https://lucasnfe.github.io/maratona-ufv/assets/images/social.png" />
 
       {%- assign default_paths = site.pages | map: "path" -%}
       {%- assign page_paths = site.header_pages | default: default_paths -%}
