Fixed many small issues

--- a/_layouts/contest.html
+++ b/_layouts/contest.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "pt_br" }}">
-
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         {%- seo -%}
         <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
         <link rel="stylesheet" href="{{ "/assets/css/contest.css" | relative_url }}">
@@ -36,7 +36,7 @@
                     </tr>
                     <tr>
                         <td>Data:</td>
-                        <td>{{page.date}}, {{page.hours}}</td>
+                        <td>{{page.date}}</td>
                     </tr>
                     <tr>
                         <td>Local:</td>
