Using romal numerals to index contest

--- a/_layouts/contest.html
+++ b/_layouts/contest.html
@@ -23,7 +23,7 @@
         <div class="wrapper">
             <div class="contest-header">
                 <h1 class="contest-title">{{page.contest}} {{page.semester}}</h>
-                <h3 class="contest-subtitle">{{page.department}} - {{page.university}}</h3>
+                <h3 class="contest-subtitle">{{page.department}}<br>{{page.university}}</h3>
             </div>
     
             <div class="contest-info">
