--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,19 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       
     <meta name="robots" content="follow, index"/>
-    <meta name="description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
-    
+    <meta name="description" content="A Maratona de Programação da Semana de Informática da UFV." />
     <meta property="og:url" content="https://lucasnfe.github.io/maratona-ufv" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Maratona de Programação UFV" />
-    <meta property="og:description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
+    <meta property="og:description" content="A Maratona de Programação da Semana de Informática da UFV." />
     <meta property="og:title" content="Maratona de Programação UFV" />
     <meta property="og:image" content="https://lucasnfe.github.io/maratona-ufv/assets/images/card2.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="https://lucasnfe.github.io/maratona-ufv" />
     <meta name="twitter:title" content="Maratona de Programação UFV" />
-    <meta name="twitter:description" content="A Maratona de Programação do Departamento de Informática da Universidade Federal de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de Ciência da Computação." />
+    <meta name="twitter:description" content="A Maratona de Programação da Semana de Informática da UFV." />
     <meta name="twitter:image" content="https://lucasnfe.github.io/maratona-ufv/assets/images/card2.jpg" />
     
     {%- seo -%}
