Limited content width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,11 @@ a:active {
     font-weight: bold;
 }
 
+.post-content {
+    max-width: 800px;
+    width: 100%
+}
+
 .site-footer-ufv {
     display: flex;
     align-items: center;
