--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,24 +85,30 @@ a:active {
     flex-direction: row;
     justify-content:flex-start;
     text-align: left;
+    margin: 10px;
 }
 
-.site-footer-ufv  h1 {
+.site-footer-ufv h1 {
     line-height: 1.2;
     font-size: 22px;
-    margin: 0px 0px 0px 10px;
     font-weight: bold;
+    margin: 0px 0px 0px 0px !important;
 }
 
 .site-footer-ufv h2 {
     line-height: 1.2;
     font-size: 22px;
-    margin: 0px 0px 0px 10px;
+    margin: 0px 0px 0px 0px !important;
+}
+
+.footer-title  {
+    width: 90%;
+    max-width: 600px;
+    margin: 0px 0px 0px 20px !important;
 }
 
 .logo {
     float: left;
-    margin: 10px;
     width: 100px;
 }
 
@@ -113,11 +119,15 @@ a:active {
     }
 
     .logo {
-        float:none;
+        float: none;
     }
 
-    .site-footer-ufv {
-        display: block;
+    .site-footer-ufv h1 {
+        font-size: 18px;
+    }
+    
+    .site-footer-ufv h2 {
+        font-size: 18px;
     }
 
     .site-nav {
