Footer aligned to the right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,51 +83,38 @@ a:active {
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content:flex-start;
-    text-align: left;
-    margin: 10px;
+    justify-content:flex-end;
+    text-align: right;
 }
 
 .site-footer-ufv h1 {
     line-height: 1.2;
     font-size: 22px;
     font-weight: bold;
-    margin: 0px 0px 0px 0px !important;
+    margin: 0px !important;
 }
 
 .site-footer-ufv h2 {
     line-height: 1.2;
     font-size: 22px;
-    margin: 0px 0px 0px 0px !important;
+    margin: 0px !important;
 }
 
 .footer-title  {
-    width: 90%;
-    max-width: 600px;
-    margin: 0px 0px 0px 20px !important;
+    margin: 0px 20px 0px 0px !important;
+    text-align: right;
 }
 
 .logo {
-    float: left;
-    width: 100px;
+    float: right;
+    max-width: 100px;
+    padding: 10px 0px 0px 0px;
 }
 
 /*Media Query*/
 @media(max-width: 860px) {
     .site-title {
         width: 85%;
-    }
-
-    .logo {
-        float: none;
-    }
-
-    .site-footer-ufv h1 {
-        font-size: 18px;
-    }
-    
-    .site-footer-ufv h2 {
-        font-size: 18px;
     }
 
     .site-nav {
@@ -138,5 +125,22 @@ a:active {
 
     .page-link {
         margin-left: 0px;
+    }
+}
+
+/*Media Query*/
+@media(max-width: 600px) {
+    .logo {
+        float: none;   
+    }
+
+    .site-footer-ufv {
+        display: block;
+        text-align: left;
+    }
+
+    .footer-title  {
+        margin: 0px !important;
+        text-align: left;
     }
 }
