--- a/_layouts/contest.html
+++ b/_layouts/contest.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         {%- seo -%}
-        <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+        <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
         <link rel="stylesheet" href="{{ "/assets/css/contest.css" | relative_url }}">
         
         <link href="https://fonts.cdnfonts.com/css/neue-haas-grotesk-text" rel="stylesheet">
