Added social media links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,9 @@
                     <h3>{{ site.title }}</h3>
                     <p>Redes Sociais do Departamento de Informática</p>
                     <div class="social-icons">
-                        <a href="https://www.youtube.com/channel/{{ site.youtube_channel }}" class="youtube-icon">YouTube</a>
-                        <a href="https://twitter.com/{{ site.twitter_username }}" class="twitter-icon">Twitter</a>
+                        <a href="https://www.instagram.com/dpi.ufv/" class="youtube-icon">Instagram</a>
+                        <a href="https://www.linkedin.com/company/dpi-ufv/" class="twitter-icon">LinkedIn</a>
+                        <a href="https://twitter.com/dpiufv" class="twitter-icon">Twitter</a>
                     </div>
                 </div>
                 <div class="footer-section sitemap">
